--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -5,21 +5,59 @@ html, body {
 	color: #070506;
 }
 
+body {
+	background-color: #b0e2ff;
+}
+
 h1, h2, h3, p {
 	margin: 0;
 }
 
-h1, h2, h3 {
+h1 {
+	font-family: verdana;
+	text-align: center;
+	text-decoration: underline;
+	color: #104e8b;
+} 
+
+h2, h3 {
 	font-family: verdana;
 	text-align: center;
 }
 
-p, a {
+p {
 	font-family: helvetica;
+	font-size: 17px;
 }
 
+a {
+	font-family: helvetica;
+	text-decoration: none;
+	color: #68838b;
+}
+
+/* header */
 
 header {
 	padding: 5rem 0 5rem;
+}
+
+/* nav */
+
+nav {
+	border: dashed 1px #191970;
+	margin: 1rem;
+	padding: 1rem;
+	text-align: center;
+	font-size: 1rem;
+}
+
+/* image */
+
+img.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 1rem;
 }
 
